--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,41 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+/* 500px Breakpoint */
+@media (max-width: 500px){
+    /*Nav Styling*/
+    header nav{
+        width: 50%;
+    }
+
+    /* Title Section Styling */
+    .title-container div{
+        width: 100%;
+        height: 40vh;
+    }
+    .title-container h1{
+        font-size: 4.6rem;
+    }
+
+    /* Artists Section Styling */
+    .artists-container{
+        flex-direction: column;
+        width: 80%;
+        
+    }
+    .artist img{
+        width:100%;
+        height: 25vh;
+    }
+    .artist{
+        display:flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .artist p{
+        width: 100%;
+        height: 20vh;
+    }
+    
+}
