--- a/css/index.css
+++ b/css/index.css
@@ -138,6 +138,15 @@ button:hover{
 
 
 @media (max-width: 1000px){
+    button{
+        padding:2% 3%;
+        font-size: 2.0rem;
+        border-radius:6px;
+        border:2px solid #626262;
+        box-shadow: 2px 2px 1px #626262;
+        transition: 2s;
+    }
+
     .artists-container{
         flex-direction: row;
         width: 100%;
@@ -172,7 +181,14 @@ button:hover{
     .title-container h1{
         font-size: 4.6rem;
     }
-
+    button{
+        padding:3% 4%;
+        font-size: 2.0rem;
+        border-radius:6px;
+        border:2px solid #626262;
+        box-shadow: 2px 2px 1px #626262;
+        transition: 2s;
+    }
     /* Artists Section Styling */
     .artists-container{
         flex-direction: column;
@@ -209,7 +225,15 @@ button:hover{
     .title-container h1{
         font-size: 4.6rem;
     }
-
+    button{
+        margin-top: 2%;
+        padding:5% 6%;
+        font-size: 2.5rem;
+        border-radius:6px;
+        border:2px solid #626262;
+        box-shadow: 2px 2px 1px #626262;
+        transition: 2s;
+    }
     /* Artists Section Styling */
     .artists-container{
         flex-direction: column;
